# grpc_otel

./: .env  Cargo.toml  justfile
client/: Cargo.toml  justfile
client/src/: lib.rs  main.rs
device_command/: Cargo.toml  build.rs
device_command/src/: lib.rs
proto/device_command/v1/: device_command.proto
proto/device_notification/v1/: device_notification.proto
server/: Cargo.toml  justfile
server/src/: command_service.rs  lib.rs  main.rs
shared/rust/resilient_grpc_client/: Cargo.toml
shared/rust/resilient_grpc_client/src/: client.rs  lib.rs  retry_middleware.rs  retry_policy.rs
shared/rust/signals/: Cargo.toml
shared/rust/signals/src/: lib.rs  signals.rs
shared/rust/signals/src/signals/: errors.rs  linux.rs  windows.rs
shared/rust/telemetry/: Cargo.toml
shared/rust/telemetry/src/: lib.rs
