[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
device_command = { path = "../device_command" }
tonic-tracing-opentelemetry = { workspace = true }
tower = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }