[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
telemetry = { path = "../shared/rust/telemetry" }
signals = { path = "../shared/rust/signals" }
tracing = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
device_command = { path = "../device_command" }
tonic-tracing-opentelemetry = { workspace = true }