[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"
publish = ["kellnr"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-bunyan-formatter = { workspace = true }